tv/transmission-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  namespace: tv
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    flame.pawelmalak/type: app
    flame.pawelmalak/name: BitTorrent
    flame.pawelmalak/url: https://transmission.mdapi.ch
    flame.pawelmalak/category: TV Sourcing
    flame.pawelmalak/icon: magnet
    flame.pawelmalak/order: '50'
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-signin: https://auth.mdapi.ch/tv/oauth2/start?rd=https://$host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy-tv.oauth2-proxy.svc.cluster.local/oauth2/auth
spec:
  ingressClassName: nginx
  rules:
    - host: transmission.mdapi.ch
      http:
        paths:
          - backend:
              service:
                name: transmission
                port:
                  number: 9091
            path: /
            pathType: Prefix
  tls:
    - hosts:
      - transmission.mdapi.ch
      secretName: transmission-cert
